Wrote test cases for most files.